# gmpda

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.yml  gmpd_with_r.Rmd  pyproject.toml  setup.cfg
examples/: testcase.py
examples/real_application/: gmpda_cfg.yml  gmpda_run.py
examples/real_application/data/: some_real_ts.csv
src/gmpda/: __init__.py  data_generator.py  gmpda.py
