# Find out more about setup.cfg and what options are available here:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = gmpda
description = Gaussian Mixture Periodicity Detection Algorithm (GMPDA)
long_description = file: README.md
author = Olga Kaiser
author_email = olga@nnaisense.com
keywords = python
license = MIT Licence
classifiers =
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Utilities
	Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
package_dir =
    =src
packages = find:
tests_require =
    gmpda[test]
install_requires =
    numpy==1.21
    scipy==1.7
    matplotlib
    pandas
    pyyaml

[options.package_data]
* = *.txt, *.md, *.rst

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    isort
    pre-commit

[mypy]
files=src/**/*.py, run/*.py, test/*.py
ignore_missing_imports=true

[flake8]
extend-exclude = src/gmpda/__version.py
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E231, E501, W503, F403
